--- a/prac_1_272/prac_1_272.csproj
+++ b/prac_1_272/prac_1_272.csproj
@@ -145,9 +145,15 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="HTML\person1.html" />
+    <Content Include="HTML\person2.html" />
+    <Content Include="HTML\person3.html" />
+    <Content Include="Content\myStyles.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="HTML\person4.html" />
+    <Content Include="HTML\person5.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
