--- a/prac_1_272/prac_1_272.csproj
+++ b/prac_1_272/prac_1_272.csproj
@@ -145,6 +145,17 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="HTML\images\austin.png" />
+    <Content Include="HTML\images\ben.png" />
+    <Content Include="HTML\images\hobby1.png" />
+    <Content Include="HTML\images\hobby2.png" />
+    <Content Include="HTML\images\hobby3.png" />
+    <Content Include="HTML\images\hobby4.png" />
+    <Content Include="HTML\images\hobby5.png" />
+    <Content Include="HTML\images\james.png" />
+    <Content Include="HTML\images\mary.png" />
+    <Content Include="HTML\images\mike.png" />
+    <Content Include="HTML\main.html" />
     <Content Include="HTML\person1.html" />
     <Content Include="HTML\person2.html" />
     <Content Include="HTML\person3.html" />
